<resources>
    <string name="app_name">POI</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="no_results_found">Sense resultats</string>
    <string name="distance_in_km">%s kms</string>
    <string name="action_search">Cerca</string>
    <string name="tag_title">PARAM_TITLE</string>
    <string name="tag_id">PARAM_ID</string>
    <string name="descTitle">Una mica d\'informació:</string>
    <string name="sortAscendant"> A-Z </string>
    <string name="sortDescendant"> Z-A </string>
    <string name="sortByDistance"> Kms </string>
    <string name="sortByFav">Favorites</string>
</resources>
